# src/main/java/com/fix4home/fix4home/model/dto/auth/ChangePasswordRequest.java
@@ -1,0 +1,23 @@
+package com.fix4home.fix4home.model.dto.auth;
+
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class ChangePasswordRequest {
+    
+    @NotBlank(message = "Old password is required")
+    private String oldPassword;
+    
+    @NotBlank(message = "New password is required")
+    @Size(min = 6, message = "Password must be at least 6 characters")
+    private String newPassword;
+}
+
